hygieia-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hygieia-api
  name: hygieia-api
  namespace: hygieia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hygieia-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hygieia-api
    spec:
      containers:
      - image: devtesthygieiaacr.azurecr.io/hygieia/hygieia-api
        name: hygieia-api
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /hygieia/logs
            name: api-logs
        resources: {}
      volumes:
        - name: api-logs
          persistentVolumeClaim:
            claimName: pv-apilogs
status: {}
