hygieia-collector-bamboo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hygieia-bamboo
  name: hygieia-bamboo
  namespace: hygieia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hygieia-bamboo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hygieia-bamboo
    spec:
      containers:
      - image: devtesthygieiaacr.azurecr.io/hygieia/bamboo-collector:1.3
        name: hygieia-bamboo
        resources: {}
status: {}
