hygieia-collector-gihub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hygieia-github
  name: hygieia-github
  namespace: hygieia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hygieia-github
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hygieia-github
    spec:
      containers:
      - image: devtesthygieiaacr.azurecr.io/hygieia/github-collector
        name: hygieia-github
        resources: {}
status: {}
