hygieia-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hygieia-ui
  name: hygieia-ui
  namespace: hygieia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hygieia-ui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hygieia-ui
    spec:
      containers:
      - image: devtesthygieiaacr.azurecr.io/hygieia/hygieia-ui
        name: hygieia-ui
        ports:
          - containerPort: 80
        resources: {}
status: {}
